# VscodeTemplateCXX

./: .clang-tidy  CMakeLists.txt
include/: hello.hpp
src/: CMakeLists.txt  hello.cc  main.cc
test/: CMakeLists.txt  test_hello.cc
